--- a/resume/jsonresume-theme-andrewwestling/assets/scss/common/variables.scss
+++ b/resume/jsonresume-theme-andrewwestling/assets/scss/common/variables.scss
@@ -13,7 +13,8 @@ $line-height-1: 1.25em;
 $line-height-2: 1.35em;
 $line-height-3: 1.6em;
 
-$text-color: #222222;
+$text-color: #050708;
+$text-color-dark: #dddddd;
 
 $font-size-xlarge: 26px;
 $font-size-large: 18px;
