--- a/resume/jsonresume-theme-andrewwestling/assets/styles.css
+++ b/resume/jsonresume-theme-andrewwestling/assets/styles.css
@@ -27,16 +27,13 @@ p {
   margin-top: 10mm;
 }
 a {
-  color: #222222;
+  color: inherit;
   font-weight: inherit;
   text-decoration: none;
 }
-a[href] {
-  text-decoration: underline;
-  text-decoration-color: #888888;
-}
 
-p, q {
+p,
+q {
   line-height: 1.25em;
 }
 
@@ -53,7 +50,9 @@ li:first-child {
   height: auto;
   margin: 0 auto;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #222222;
+}
+.content a[href] {
+  text-decoration: underline;
 }
 
 .table {
